# brick_breaker_game

./: CMakeLists.txt  README.md  main.cpp
Resources/: records.csv
include/Core/: Ball.h  Brick.h  Game.h  GameLogic.h  Paddle.h  PowerUp.h  State.h
include/Screens/: GameScreen.h  MenuScreen.h  Screen.h  ScreenManager.h
include/UI/: HUD.h  Interface.h
include/Utils/: GameRecords.h  ResourceManager.h
src/Core/: Ball.cpp  Brick.cpp  Game.cpp  GameLogic.cpp  Paddle.cpp  PowerUp.cpp
src/Screens/: GameScreen.cpp  MenuScreen.cpp  ScreenManager.cpp
src/UI/: HUD.cpp  Interface.cpp
src/Utils/: GameRecords.cpp  ResourceManager.cpp
